--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -10,10 +10,11 @@ body {
   display: grid;
   grid-template-columns: 50% 50%;
   width: 100%;
-  height: 100vh; 
-  background-image: linear-gradient(to right, rgba(49, 49, 49, 0.5) 1px, transparent 1px),
-  linear-gradient(to bottom, rgba(49, 49, 49, 0.5)1px, transparent 1px);
-  background-size: 90px 90px; 
+  height: 100vh;
+  background-image:
+    linear-gradient(to right, rgba(49, 49, 49, 0.5) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(49, 49, 49, 0.5) 1px, transparent 1px);
+  background-size: 90px 90px;
 }
 
 ul {
@@ -106,18 +107,17 @@ li:active {
   color: white;
   font-family: 'Montserrat', sans-serif;
 }
+
 .user-inputs {
   width: 50%;
   margin: 15px auto;
   border-radius: 5px;
   font-size: 16px;
   padding: 10px;
-  
 }
-  
+
 .joinChatDiv button {
   width: 20%;
-  padding: 10px;
   margin: 7px auto;
   border: none;
   border-radius: 15px;
@@ -155,7 +155,8 @@ li:active {
 .chatFrame p {
   margin: 0;
 }
- .chat-header {
+
+.chat-header {
   height: 45px;
   border-radius: 3px;
   background: #00e508;
@@ -199,7 +200,6 @@ li:active {
   cursor: pointer;
   font-weight: bold;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-
 }
 
 .sendMessageBtn:hover {
@@ -249,7 +249,7 @@ li:active {
 
 .sentimentPopup {
   width: 80%;
-  height: 40%; 
+  height: 40%;
   margin: 20% auto;
   background-color: rgba(164, 164, 164, 0.2);
   border-radius: 15px;
@@ -300,7 +300,9 @@ li:active {
 
 .all-socials {
   display: flex;
+
   /* flex-direction: column; */
+
   /* margin-right: 50px; */
   background-color: red;
 }
