--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -270,6 +270,11 @@ li:active {
   display: flex;
   padding: 5px 0;
   justify-content: flex-end;
+  font-size: 13px;
+}
+
+#sentiment-probability {
+  margin-left: 15px;
 }
 
 .sentimentPopup {
